--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <div class="hero__title">Enjoy Rich</div>
+                  <div class="hero__title">Fantastic</div>
                   <img src="images/image-1.jpg" alt="" />
                 </div>
                 <div class="swiper-slide">
-                  <div class="hero__title">Fantastic</div>
+                  <div class="hero__title">Excellent</div>
                   <img src="images/image-2.jpg" alt="" />
                 </div>
                 <div class="swiper-slide">
@@ -86,8 +86,8 @@
           <div id="main-content">
             <aside class="side left">
               <div class="side__inner">
-                <a href="#" class="twitter icon tween-animate-title">Twitter</a>
-                <a href="#" class="fb icon tween-animate-title">Facebook</a>
+                <a href="#" class="twitter icon tween-animate-title">X (Twitter)</a>
+
               </div>
             </aside>
             <main>
