--- a/Wedding Page/seat_view.html
+++ b/Wedding Page/seat_view.html
@@ -30,7 +30,7 @@
     <div class="carousel">
       <div class="carousel-cell" id="confetti-container-left">
         <div class="main-circles">
-          <div class="main-sato-circle main-circle-page1">
+          <div class="main-man-circle main-circle-page1">
             <a href="#">
               <img src="#" alt="Description" />
             </a>
@@ -46,7 +46,7 @@
 
         <div class="table-container-page1">
           <div class="circle-column">
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00009.jpg"
@@ -55,7 +55,7 @@
               </a>
             </div>
 
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00010.jpg"
@@ -63,7 +63,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00011.jpg"
@@ -71,25 +71,25 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-left">紐野 炯燐<br />新郎姉</div>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-left">川野 差義<br />新郎甥</div>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-left">川野 寅男<br />新郎義兄</div>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
@@ -127,7 +127,7 @@
           </div>
 
           <div class="circle-column">
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00012.jpg"
@@ -135,7 +135,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00013.jpg"
@@ -143,7 +143,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00014.jpg"
@@ -151,7 +151,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00015.jpg"
@@ -159,19 +159,19 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-left">催 米子<br />新郎伯母</div>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-left">諏訪内 早侑<br />新郎伯父</div>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
@@ -186,7 +186,7 @@
 
       <div class="carousel-cell">
         <div class="main-circles">
-          <div class="main-sato-circle">
+          <div class="main-man-circle">
             <a href="#">
               <img
                 src="./src/images/seat_view/man_main.jpg"
@@ -194,7 +194,7 @@
               />
             </a>
           </div>
-          <div class="main-mari-circle">
+          <div class="main-woman-circle">
             <a href="#">
               <img
                 src="./src/images/seat_view/woman_main.jpg"
@@ -206,7 +206,7 @@
 
         <div class="table-container">
           <div class="circle-column">
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00001.jpg"
@@ -214,7 +214,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00002.jpg"
@@ -222,7 +222,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00003.jpg"
@@ -230,7 +230,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00004.jpg"
@@ -238,13 +238,13 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-right">向野 瑛大<br />新郎伯父</div>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
@@ -283,7 +283,7 @@
           </div>
 
           <div class="circle-column">
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00005.jpg"
@@ -291,7 +291,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00006.jpg"
@@ -299,7 +299,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00007.jpg"
@@ -307,7 +307,7 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/man00008.jpg"
@@ -315,13 +315,13 @@
                 />
               </a>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-right">古川 文雄<br />新郎伯父</div>
             </div>
-            <div class="circle-sato">
+            <div class="circle-man">
               <a href="#">
                 <img src="./src/images/man_shinzoku.png" alt="Description" />
               </a>
@@ -338,7 +338,7 @@
           <!------------------------            ページ2の真ん中            ----------------------------------------------------->
 
           <div class="circle-column">
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00001.jpg"
@@ -346,7 +346,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00002.jpg"
@@ -354,7 +354,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00003.jpg"
@@ -362,7 +362,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00004.jpg"
@@ -370,13 +370,13 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-left">東麻生原 玲菜仁<br />新婦叔父</div>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
@@ -415,7 +415,7 @@
           </div>
 
           <div class="circle-column">
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00005.jpg"
@@ -423,7 +423,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00006.jpg"
@@ -431,7 +431,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00007.jpg"
@@ -439,7 +439,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00008.jpg"
@@ -447,13 +447,13 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-left">細川 玲花<br />新婦祖母</div>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
@@ -469,7 +469,7 @@
 
       <div class="carousel-cell" id="confetti-container-right">
         <div class="main-circles">
-          <div class="main-sato-circle main-circle-page3">
+          <div class="main-man-circle main-circle-page3">
             <a href="#">
               <img src="#" alt="Description" />
             </a>
@@ -478,7 +478,7 @@
 
         <div class="table-container-page3">
           <div class="circle-column">
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00009.jpg"
@@ -486,7 +486,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00010.jpg"
@@ -494,7 +494,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00011.jpg"
@@ -502,7 +502,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00012.jpg"
@@ -510,7 +510,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00013.jpg"
@@ -518,19 +518,19 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-right">粳賀 和久<br />新婦弟</div>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-right">日永田 綸<br />新婦伯母</div>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
@@ -567,7 +567,7 @@
           </div>
 
           <div class="circle-column">
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00014.jpg"
@@ -575,7 +575,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00015.jpg"
@@ -583,7 +583,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00016.jpg"
@@ -591,7 +591,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00017.jpg"
@@ -599,7 +599,7 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="./each_introduction/each_introduction.html">
                 <img
                   src="./src/images/seat_view/woman00018.jpg"
@@ -607,13 +607,13 @@
                 />
               </a>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
               <div class="popup-right">俵石 おゆき<br />新婦母</div>
             </div>
-            <div class="circle-mari">
+            <div class="circle-woman">
               <a href="#">
                 <img src="./src/images/woman_shinzoku.png" alt="Description" />
               </a>
