--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="header__li item"><a href="#">Service</a></li>
                 <li class="header__li item"><a href="#">Company</a></li>
                 <li class="header__li item">
-                  <a class="btn filled" href="#">Contact</a>
+                  <a class="btn filled" href="https://twitter.com/motoyama_yamamo">Contact</a>
                 </li>
               </ul>
             </nav>
@@ -86,7 +86,7 @@
           <div id="main-content">
             <aside class="side left">
               <div class="side__inner">
-                <a href="#" class="twitter icon tween-animate-title">X (Twitter)</a>
+                <a href="https://twitter.com/motoyama_yamamo" class="twitter icon tween-animate-title">X (Twitter)</a>
 
               </div>
             </aside>
@@ -185,7 +185,7 @@
           </div>
           <nav class="footer__nav">
             <ul class="footer__ul">
-              <li class="footer__li item"><a href="#">Contact</a></li>
+              <li class="footer__li item"><a href="https://twitter.com/motoyama_yamamo">Contact</a></li>
             </ul>
             <div class="footer__copyright item">&copy; Ryo</div>
           </nav>
@@ -204,7 +204,7 @@
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link" href="#">
+            <a class="mobile-menu__link" href="https://twitter.com/motoyama_yamamo">
               <span class="main-title">Contact Us</span>
               <span class="sub-title">コンタクト方法</span>
             </a>
