1125_トップページ写真差し替え

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <div class="hero__title">Fantastic</div>
+                  <div class="hero__title">Web Page</div>
                   <img src="images/image-1.jpg" alt="" />
                 </div>
                 <div class="swiper-slide">
-                  <div class="hero__title">Excellent</div>
+                  <div class="hero__title">Programming</div>
                   <img src="images/image-2.jpg" alt="" />
                 </div>
                 <div class="swiper-slide">
-                  <div class="hero__title">Experience</div>
+                  <div class="hero__title">Data Science</div>
                   <img src="images/image-3.jpg" alt="" />
                 </div>
               </div>
@@ -94,7 +94,7 @@
               <section class="travel">
                 <div class="travel__inner">
                   <div class="travel__img cover-slide">
-                    <img class="img-zoom" src="images/image-travel.jpg" />
+                    <img class="img-zoom" src="images/top_page.png" />
                   </div>
                   <div class="travel__texts appear left">
                     <div class="travel__texts-inner">
@@ -133,40 +133,49 @@
                 <div class="houses__inner">
 
                   <div class="houses__item">
-                    <div class="cover-slide hover-darken">
-                      <div
-                        class="bg-img-zoom img-bg50"
-                        style="background-image: url(images/villa-2.jpg)"
-                      ></div>
-                    </div>
-                    <p class="houses__title">席次表</p>
+                    <a href="./Wedding Page/seat_view.html" class="your-link-class">
+                      <div class="cover-slide hover-darken">
+                        <div
+                          class="bg-img-zoom img-bg50"
+                          style="background-image: url(images/seat.png)"
+                        ></div>
+                      </div>
+                      <p class="houses__title">席次表</p>
+                    </a>
                   </div>
+
                   <div class="houses__item">
+                    <a href="./Wedding Page/seat_view.html" class="your-link-class">
                     <div class="cover-slide hover-darken">
                       <div
                         class="bg-img-zoom img-bg50"
-                        style="background-image: url(images/villa-3.jpg)"
+                        style="background-image: url(images/individual.png)"
                       ></div>
                     </div>
                     <p class="houses__title">個別参加者紹介</p>
+                  </a>
                   </div>
                   <div class="houses__item">
+                    <a href="./Wedding Page/seat_view.html" class="your-link-class">
                     <div class="cover-slide hover-darken">
                       <div
                         class="bg-img-zoom img-bg50"
-                        style="background-image: url(images/villa-4.jpg)"
+                        style="background-image: url(images/2nd.png)"
                       ></div>
                     </div>
                     <p class="houses__title">二次会案内</p>
+                  </a>
                   </div>
                   <div class="houses__item">
+                    <a href="./Wedding Page/seat_view.html"class="your-link-class">
                     <div class="cover-slide hover-darken">
                       <div
                         class="bg-img-zoom img-bg50"
-                        style="background-image: url(images/villa-5.jpg)"
+                        style="background-image: url(images/team.png)"
                       ></div>
                     </div>
-                    <p class="houses__title">二次会チーム紹介</p>
+                    <p class="houses__title">複数人紹介</p>
+                  </a>
                   </div>
                 </div>
             </main>
