--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <header class="header">
           <div class="header__inner appear up">
             <div class="logo item">
-              <img class="logo__img" src="images/logo.svg" />
+              <img class="logo__img" src="images/favicon.png" />
               <span class="logo__stay">PortFolio</span>
               <span class="logo__world">Page</span>
             </div>
@@ -188,7 +188,7 @@
         </div>
         <div class="footer appear up">
           <div class="logo item">
-            <img class="logo__img" src="images/logo.svg" />
+            <img class="logo__img" src="images/favicon.png" />
             <span class="logo__stay">PortFolio</span>
             <span class="logo__world">Page</span>
           </div>
